--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/auth": "^1.11.0",
+    "@firebase/firestore": "^4.9.0",
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.0.0",
     "lucide-react": "^0.526.0",
+    "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.7.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
