--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "react-slick": "^0.31.0",
